--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
+    "@tiptap/extension-placeholder": "^2.1.13",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
