Add swipe file feature and extension updates
- Add swipe file page and SwipePostCard component
- Update extension routes (analytics, save-post, log)
- Update manifest.json for extension
- Enhance FloatingActionMenu and PostGenerator components
- Update types and main page

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,7 +5,8 @@
     "description": "Generate, save, and analyze LinkedIn posts directly from LinkedIn",
     "permissions": [
         "storage",
-        "activeTab"
+        "activeTab",
+        "alarms"
     ],
     "host_permissions": [
         "https://www.linkedin.com/*",
@@ -40,7 +41,6 @@
         }
     ],
     "background": {
-        "service_worker": "background.js",
-        "type": "module"
+        "service_worker": "background.js"
     }
 }
